--- a/index.ipynb
+++ b/index.ipynb
@@ -2,8 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "index": 0,
+    "solution": false
+   },
    "outputs": [],
    "source": [
     "# Test Activity"
@@ -11,33 +14,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "index": 1,
+    "solution": false
+   },
    "source": [
     "# Type some code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solution\n"
-     ]
-    }
-   ],
-   "source": [
-    "#__SOLUTION__\n",
-    "print('solution')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "index": 3,
+    "solution": false
+   },
    "outputs": [],
    "source": []
   }
@@ -61,8 +52,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
