--- a/index.ipynb
+++ b/index.ipynb
@@ -1,25 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test Activity"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "index": 1,
+    "solution": false
+   },
    "source": [
     "# Type some code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-10-20T20:45:18.176478Z",
+     "iopub.status.busy": "2021-10-20T20:45:18.175723Z",
+     "iopub.status.idle": "2021-10-20T20:45:18.180090Z",
+     "shell.execute_reply": "2021-10-20T20:45:18.180470Z"
+    },
+    "index": 2,
+    "solution": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -30,16 +33,8 @@
     }
    ],
    "source": [
-    "#__SOLUTION__\n",
     "print('solution')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -61,8 +56,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
